@@ -1,3 +1,8 @@
+2009-02-03  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/39056
+	* g++.dg/cpp0x/initlist13.C: New test.
+
 2009-02-03  Paolo Bonzini  <bonzini@gnu.org>
 
 	PR c++/36897
