@@ -1,3 +1,9 @@
+2009-02-03  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/39056
+	* typeck2.c (digest_init_r): Don't call process_init_constructor
+	for COMPLEX_TYPE.
+
 2009-02-03  Paolo Bonzini  <bonzini@gnu.org>
 
 	PR c++/36897
